# rgscore

./: LICENSE  README.md  pyproject.toml
src/rgscore/: __init__.py
src/rgscore/model/: metavar.py  register.py  regset.py
tests/: test_integration_bmp581.py  test_register.py
