[project]
name = "rgscore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.4.0",
    "i2c-api @ git+https://github.com/priimak/i2c_api.git@v0.2.2"
]

#[project.dev]
#depenencies = [
#    "pytest"
#]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]
