[project]
name = "rgscore"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.4.0",
    "i2c-api @ git+https://github.com/priimak/i2c_api.git@v0.2.2"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "i2capi-i2cdriver @ git+https://github.com/priimak/i2capi_i2cdriver.git@v0.1.1"
]
